# polyglot-sql-rb

./: .gitignore  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  agents.md  polyglot-rb.gemspec  polyglot-sql.gemspec
.buildkite/: pipeline.yml
.buildkite/steps/: clippy.sh
ext/polyglot_rb/: Cargo.toml  extconf.rb
ext/polyglot_rb/src/: dialect.rs  errors.rs  lib.rs
lib/: polyglot.rb
lib/polyglot/: validation_result.rb  version.rb
scripts/: sync_readme_dialects.rb
spec/: polyglot_spec.rb  spec_helper.rb  transpile_spec.rb
